added some gsap animation

--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@
 	display: flex;
 	align-items: center;
 	gap: 1rem;
+	overflow: hidden;
 
 	/* Position */
 	position: absolute;
@@ -30,7 +31,7 @@
 	border-radius: 1.2rem;
 
 	/* Spacing */
-	padding: 2rem 2rem;
+	padding: 2rem 2.5rem;
 
 	/* Typography */
 	font-family: var(--poppins);
@@ -49,8 +50,8 @@
 
 .cookie-subtitle {
 	font-weight: regular;
-	font-size: 0.7rem;
-	padding: 0.5rem 0rem;
+	font-size: 0.85rem;
+	padding: 1rem 0rem;
 }
 
 .cookie-button {
@@ -58,14 +59,14 @@
 	padding: 0.5rem 1rem;
 	color: #4f2626;
 	font-family: var(--poppins);
-	font-size: 0.7rem;
+	font-size: 0.85rem;
 	border-radius: 0.3rem;
 }
 
 @media (min-width: 576px) {
 	.cookie-container {
-		width: 350px;
-		height: 170px;
+		width: 430px;
+		height: 200px;
 	}
 
 	.cookie {
